@@ -1,5 +1,3 @@
-- Take the code that redirects requests for directories so that their path ends
-  with "/" and move it from Stitch::Needle#sew to a middleware.
 - Designate and support a location for files containing user-defined page
   types.
 - Add Blog page types.
